--- a/vj4/locale/zh_CN.yaml
+++ b/vj4/locale/zh_CN.yaml
@@ -689,6 +689,7 @@ Export as HTML: 导出为 HTML
 Export All Code: 导出所有代码
 Solved Problems: 解决题目
 Total Score: 总分数
+Submit Count: 提交次数
 Scoreboard: 成绩表
 Scoreboard (Hidden): 成绩表 (隐藏)
 Contributions: 贡献
