--- a/vj4/locale/zh_CN.yaml
+++ b/vj4/locale/zh_CN.yaml
@@ -101,6 +101,7 @@ Messages: 站内消息
 My Profile: 我的资料
 New Email: 新电子邮件
 New Password: 新密码
+Really want to submit?: 确定要提交？
 Not available: 不可用
 Oh, there is no task in the queue!: 喔，队列中目前没有任务。
 Oh, there is no task that matches the filter!: 喔，目前没有符合过滤条件的任务。
